# diplom

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  env  pyproject.toml
.github/workflows/: action.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  env
deploy/nginx/: default.conf
src/: .dockerignore  .env  .env_example  Dockerfile
src/bot/: views.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/core/: admin.py  serializers.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  models.py  permissions.py  serializers.py  views.py
src/goals/migrations/: 0001_initial.py  0002_alter_goalcategory_unique_together.py  0003_goal.py  0004_goalcomment.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
src/goals/tests/: test_board.py
src/todolist/: settings.py  urls.py
