[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Maxim <99118327+Maximz2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
ansible-vault-win = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tools.isort]
py_version = 310
profile = 'django'
line_length = 120
multi_line_output = 2
known_first_party = ["todolist", "core"]
